--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
             <div class="special_header_info">В скором времени появится "бургер меню"</div>
             <div class="nav_bar">
-                <a  class="header_links" href="#">Каталог</a>
-                <a  class="header_links" href="#">Доставка</a>
-                <a  class="header_links" href="#">Коллекция</a>
-                <a  class="header_links" href="#">Контакты</a>
+                <a  class="header_links" href="#we">О нас</a>
+                <a  class="header_links" href="#collection">Коллекция</a>
+                <a  class="header_links" href="#tasting">Дегустация</a>
+                <a  class="header_links" href="#contacts">Контакты</a>
             </div>
             <div class="header_buttoms">
                 <a href="#"><button class="wine_card">Винная карта</button></a>
@@ -32,7 +32,7 @@
 
     <div class="about_good_wine">
         <div class="wrapper_good_wine">
-            <div class="info_about_good_wine">
+            <div class="info_about_good_wine" id="we">
                 <div class="main_info_about_good_wine">Лучший вкус, это вкус долголетнего вина</div>
                 <div class="hr_about_good_wine"></div>
                 <div class="descroption_about_good_wine">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim tortor in hac id imperdiet adipiscing. Pellentesque nisi, mi sit non sit sed fermentum. Felis adipiscing morbi sodales ac. Mauris dictumst risus pulvinar blandit elit. Vestibulum quam ultrices nascetur et viverra suscipit. Proin vitae aliquet leo aliquam amet rutrum. Lectus auctor purus ultrices enim ultrices. Augue fringilla tellus tortor orci ultrices sed. Viverra cras sapien, pellentesque viverra malesuada. Tellus dolor, eget vitae dignissim molestie eget sit duis. Vitae dui vel pretium euismod diam. Pellentesque amet, lacus, amet, quis risus. Pellentesque scelerisque nunc, orci aliquam quis.</div>
@@ -51,7 +51,7 @@
 
     <div class="colection_of_wine">
         <div class="wrapper_new_wine">
-            <div class="colection">
+            <div class="colection" id="collection">
                 <div class="new_colection">Новинки коллекций</div>
                 <div class="about_harvest">Март 1980 Урожай Марселя</div>
                 <div class="colection_hr"></div>
@@ -96,7 +96,7 @@
     </div>
     
     <div class="registration_for_tasting">
-        <div class="wrapper_tasting">
+        <div class="wrapper_tasting" id="tasting">
             <form>
                 <fieldset>
                     <legend class="registration_for_tasting_head">Запись на дегустацию</legend>
@@ -134,7 +134,7 @@
                     <a class="footer_links" href="#">Контакты</a>
                 </nav>
              </div>
-            <div class="second_footer">
+            <div class="second_footer" id="contacts">
                 <div class="second_footer_our_block">
                     <div class="wine_shop second_footer_block">винный бутик LE CORTE</div>
                     <div class="footer_number second_footer_block">8 (812) 123-45-67</div>
