--- a/index_eu.html
+++ b/index_eu.html
@@ -27,7 +27,7 @@
             </div>
             <div class="special_header_info">The"burger menu" will apear soon</div>
             <div class="nav_bar">
-                <a  class="header_links" href="#we">О нас</a>
+                <a  class="header_links" href="#we">About us</a>
                 <a  class="header_links" href="#collection">Collection</a>
                 <a  class="header_links" href="#tasting">Tasting</a>
                 <a  class="header_links" href="#contacts">Contacts</a>
